# commander

./: README.md  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: ApplicationResponse.ts
src-tauri/src/: main.rs  windows.rs
src-tauri/src/ipc/: response.rs
src-tauri/src/windows/: application.rs  icons.rs  mod.rs
src/common/: CommandManager.ts  Commands.ts
src/components/: Commander.vue  Search.vue  SearchInput.vue  SearchResults.vue
src/composables/: useCommander.ts  useObserver.ts  useOverlay.ts  useShortcuts.ts  useState.ts
src/modules/: ApplicationsModule.ts  applications.ts  debug.ts  index.ts
src/types/: Command.d.ts  Module.d.ts  State.d.ts
