[package]
name = "commander"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["fs-read-dir", "global-shortcut-all", "shell-all", "window-center", "window-hide", "window-set-focus", "window-show"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ts-rs = "6.2.1"
base64 = "0.21.0"
image = "0.23"
lnk = "0.5.1"
lnk_parser = "0.4.0"
winapi = { version = "0.3.9", features = ["windef", "winuser", "shellapi", "wingdi"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
